rust/message-backup/tests/res/test-cases/invalid/missing-account-data.jsonproto
[
  {
    "version": "1",
    "backupTimeMs": "1705692409729"
  },
  {
    "recipient": {
      "id": "1",
      "self": {}
    }
  }
]
